# robotic_system

./: .dockerignore  Dockerfile  README.md  entrypoint.sh
robot_ws/: README.md  conda-lock.yml  environment.yml  ir2rgb.py  realsense_ir2rgb_params.json  requirement.txt
robot_ws/collect_data/: collect_continue.py  collect_data.py
robot_ws/collect_data/dataset_continue/poses/: 0001_1777443789672_pose.txt  0002_1777443789820_pose.txt  (+1884 more)
robot_ws/collect_data/dataset_out/: poses.csv
robot_ws/data/Util/: Final_GS_converted_meta.json  alignment.yaml  alignment_803.yaml  alignment_modified.yaml  alignment_origin.yaml  convert_sem_gs_rgb_ply.py  ply_to_npz.py  pred_trajectory.txt  semantic_meta.json  timestamp_pose.txt
robot_ws/data/lab/: accumulated_gaussians_instance_semantic_info.json  accumulated_gaussians_instance_semantic_info.json.bak  accumulated_gaussians_instance_semantic_info.json.instances.bak  accumulated_gaussians_instance_semantic_info_803.json  actual_color_mapping.json  kachaka_native.yaml  kachaka_native_old.yaml  pred_trajectory.json  semantic_legend.json  semantic_pcd_accumulated_gaussians_meta_803.json
robot_ws/data/map_alignment/: Json2CSV_3dtraj.py  cam_to_base.yaml  extract_2d_pose_from_bag.py  map_alignment_v2.py  map_alignment_v3.py  pose2d.csv  pose3d.csv  pose3d.txt  pred_trajectory.json  robot_deploy_slam_example0_camera_trajectory.json  visualize_2d_trajectory.py  visualize_3d_json_trajectory.py
robot_ws/src/decision_maker/: package.xml  setup.py
robot_ws/src/decision_maker/decision_maker/: agent_decision_maker_node.py  decision_agent.py  decision_harness.py  decision_maker_node.py  decision_maker_test.py  mock_grasp_server.py  mock_kachaka_nav_server.py  mock_object_query_server.py  nl_planner.py  roboagent_agent.py  roboagent_decision_maker_node.py  roboagent_prompts.py  scenario_library.py  task_decomposer.py
robot_ws/src/decision_maker/decision_maker/harness_rules/: DECOMPOSITION.md  DECOMPOSITION_FORMAT.md  MEMORY.md  OUTPUT_FORMAT.md  PLANNING.md  REPLANNING.md  SKILLS.md  VERIFICATION.md
robot_ws/src/decision_maker/launch/: agent_mock_pipeline.launch.py
robot_ws/src/decision_maker/test/: test_decision_agent.py  test_decision_harness.py  test_task_decomposer.py
robot_ws/src/decision_maker_interfaces/: CMakeLists.txt
robot_ws/src/mm_interface/: CMakeLists.txt  package.xml
robot_ws/src/mm_interface/action/: TaskCommand.action
robot_ws/src/mm_interface/resource/: mm_interface
robot_ws/test/dataset_out/: poses.csv
robot_ws/tools/: show_selected_instance_markers.py
scripts/: prune_by_instance_order.py
temp/dataset_out/: poses.csv
temp/dataset_out/meta/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json
(+426 files in other folders)
