<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>decision_maker</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dohuuphu25@gmail.com">phudh</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>nav2_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <!-- <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend> -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>decision_maker_interfaces</exec_depend>
  <exec_depend>mm_interface</exec_depend>
  <exec_depend>object_query_interfaces</exec_depend>
  <exec_depend>kachaka_interfaces</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
